| Bug #2776 | Stored procedure crash if variable assigned to default | ||
|---|---|---|---|
| Submitted: | 13 Feb 2004 9:05 | Modified: | 6 Apr 2004 8:53 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.0-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Bugs System | Target Version: | |
[13 Feb 2004 9:05]
Peter Gulutzan
[17 Feb 2004 12:47]
Dean Ellis
Verified against 5.0.1-alpha-log.
[6 Apr 2004 8:53]
Per-Erik Martin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
